<resources>
    <string name="app_name">Hospital System</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prototype_map">Prototype Map</string>
    <string name="doctor">Doctor</string>
    <string name="nurse">Nurse</string>
    <string name="receptionist">Receptionist</string>
    <string name="analysis_employee">Analysis Employee</string>
    <string name="manager">Manager</string>
    <string name="hr">HR</string>
    <string name="lower_background_image_description">lower background image description</string>
    <string name="upper_background_image_description">upper background image description</string>
    <string name="loading">Loading…</string>
    <string name="forget_password"><u>Forget Password ?</u></string>
    <string name="welcome_back">Welcome Back !</string>
    <string name="to_continue_login_now">To Continue, Login Now</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="app_icon_image_description">app icon image description</string>
    <string name="login">Login</string>
    <string name="tasks">Tasks •</string>
    <string name="calls">Calls •</string>
    <string name="you_have_new_1_request">You have new +1 Request</string>
    <string name="you_have_new_1_tasks">You have new +1 Tasks</string>
    <string name="seif_eldin_mohamed">Seif Eldin Mohamed</string>
    <string name="specialist_doctor">Specialist, Doctor</string>
    <string name="image_tasks_description">image tasks description</string>
    <string name="image_calls_description">image calls description</string>
    <string name="image_notification_description">image notification description</string>
    <string name="user_image_description">user image description</string>
    <string name="reports">Reports •</string>
    <string name="you_have_new_3_reports">You have new +3 Reports</string>
    <string name="attendance_n_amp_nleaving"><![CDATA[attendance\n&\nleaving]]></string>
    <string name="cases">Cases</string>
    <string name="employee">"Employee •</string>
    <string name="hazem_khaled">Hazem Khaled</string>
    <string name="calender_image_description">calender image description</string>
    <string name="state_finish_image_description">state finish image description</string>
    <string name="person_image_description">person image description</string>
    <string name="pending_image_description">pending image description</string>
    <string name="calls_fragment">Calls</string>
    <string name="image_button_for_add_calls">image button for add calls</string>
    <string name="select_doctor">Select Doctor</string>
    <string name="send_call">Send Call</string>
    <string name="dr_salma_ahmed">Dr.Salma Ahmed</string>
    <string name="online_status_img">online_status_img</string>
    <string name="the_request_has_been_send_successfully">The request has been send successfully</string>
    <string name="back_to_home">Back to Home</string>
    <string name="lorem_case_description">Details note : Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s</string>
    <string name="case_details">Case Details</string>
    <string name="patient_name">Patient Name</string>
    <string name="date">Date</string>
    <string name="seif_mohamed">Seif Mohamed</string>
    <string name="age">Age</string>
    <string name="status">Status</string>
    <string name="case_description">Case Description</string>
    <string name="process">Process</string>
    <string name="log_out">Logout</string>
    <string name="_21_years">21 Years</string>
    <string name="_01000883795">01000883795</string>
    <string name="_24_04_2022">24.04.2022</string>
    <string name="case_logged_out">Case has been logged out</string>
    <string name="finished">Finished</string>
    <string name="specialist_doctor_profile">Specialist - Doctor</string>
    <string name="single">Single</string>
    <string name="male">Male</string>
    <string name="_26_06_2001">26.06.2001</string>
    <string name="cairo_egypt">Cairo, Egypt</string>
    <string name="sm499088_gmail_com">sm499088@gmail.com</string>
    <string name="profile_image_background_description">profile image background description</string>
    <string name="my_profile">My Profile</string>
    <string name="reports_name">Reports</string>
    <string name="upload_image">Upload Image</string>
    <string name="report_name_hint">Report Name</string>
    <string name="description">Description</string>
    <string name="upload_image_description">upload image description</string>
    <string name="create_report">Create Report</string>
    <string name="report_details">Report Details</string>
    <string name="report_1">Report 1</string>
    <string name="_26_mar_2022">26 Mar 2022</string>
    <string name="end">End</string>
    <string name="image_from_deoctor_report">image from deoctor report</string>
    <string name="type_your_replay">Type Your Replay</string>
    <string name="specialist_manager">Specialist, Manager</string>
    <string name="replay_manager">Replay - Manager</string>
    <string name="line_side_image_description">line side image description</string>
    <string name="tasks_toolbar">Tasks</string>
    <string name="lorem_details">Details note : Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s</string>
    <string name="attendance">Attendance</string>
    <string name="leaving">Leaving</string>
    <string name="note">Note</string>
    <string name="_09_00_am">09:00 am</string>
    <string name="_04_00_pm">04:00 pm</string>
    <string name="image_button_for_leaving_description">image button for leaving description</string>
    <string name="not_yet_image_description">not yet image description</string>
    <string name="finidhed_image_description">finidhed image description</string>
    <string name="leaving_button_image_description">leaving button image description</string>
    <string name="please_touch_id_sensor_to_verify_registration">Please touch ID sensor to verify registration</string>
    <string name="background_image_for_attendance_description">background image for attendance description</string>
    <string name="finger_print_image_description">finger print image description</string>
    <string name="your_attendance_has_been_registered">Your attendance has been registered</string>
    <string name="image_button_to_back_to_attendance">image button to back to attendance</string>
    <string name="lorem">Lorem Ipsum is simply dummy text of</string>
    <string name="add_note">Add Note</string>
    <string name="task_details">Task Details</string>
    <string name="execution">Execution</string>
    <string name="to_do">To do</string>
    <string name="task_1">Task 1</string>
    <string name="send">Send</string>
    <string name="notification">Notification</string>
    <string name="you_have_new_call_manger">You have new call manger</string>
    <string name="_02_39am">02:39AM</string>
    <string name="new_notification_image_description">new notification image description</string>
    <string name="edit_image_description">edit image description</string>
    <string name="employee_hr">Employee</string>
    <string name="add_employee_image_description">add employee image description</string>
    <string name="all">All</string>
</resources>