<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mediumGreen"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.SuccessfulFingerPrintFragment">

    <ImageView
        android:id="@+id/done_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/finger_print_image_description"
        android:src="@drawable/ic_done_finger"
        app:layout_constraintBottom_toTopOf="@+id/imageView17"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/background_image_for_attendance_description"
        android:scaleType="fitXY"
        android:src="@drawable/attendance_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textView32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:text="@string/your_attendance_has_been_registered"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintEnd_toEndOf="@+id/done_img"
        app:layout_constraintStart_toStartOf="@+id/done_img"
        app:layout_constraintTop_toBottomOf="@+id/done_img"
        tools:ignore="TextContrastCheck" />

    <ImageButton
        android:id="@+id/btn_back_attendance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/mediumGreen"
        android:contentDescription="@string/image_button_to_back_to_attendance"
        android:src="@drawable/ic_next_attendance"
        app:layout_constraintBottom_toTopOf="@+id/imageView17"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck,RedundantDescriptionCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>